--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "joinus",
+  "name": "hws",
   "version": "1.0.0",
-  "description": "",
+  "description": "node app",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/JamesonSockFancy/hws.git"
   },
   "author": "",
   "license": "ISC",
