--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "faker": "^4.1.0",
+    "fs": "0.0.1-security",
     "mysql": "^2.16.0",
     "qs": "^6.6.0",
     "request": "^2.88.0",
