--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.16.4",
     "faker": "^4.1.0",
     "fs": "0.0.1-security",
+    "http": "0.0.0",
     "mysql": "^2.16.0",
     "qs": "^6.6.0",
     "request": "^2.88.0",
