--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "dotenv": "^7.0.0",
     "download": "^7.1.0",
     "download-csv": "^1.1.1",
     "download-file": "^0.1.5",
